# escape-artist

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  color-print.cabal  escape-artist.cabal  stack-8.0.yaml  stack-ghc-7.8.4.yaml  stack.yaml
app/: Main.hs
docker/ghc-7.8.4/: build.sh  common.sh  run.sh  setup.sh
docker/ghc-7.8.4/stack-setup/: escape-artist.cabal  setup.sh
docker/stack-1.3.3/: Dockerfile  build.sh  common.sh  push.sh  run.sh
docker/stack-1.3.3/stack-setup/: setup.sh
examples/: Examples.hs  GHC784.hs  Misc.hs  RainbowString.hs  SyntaxError.hs
scripts/: VisualTest.hs  full_test.sh  install_stack.sh  install_stack_download.sh  lts_versions.sh  make_show_td.sh  run_tests.sh
src/: EscapeArtist.hs
src/EscapeArtist/: Constants.hs  Internal.hs
src/Text/: ColorPrint.hs  EscapeArtist.hs
src/Text/ColorPrint/: Internal.hs
src/Text/EscapeArtist/: Constants.hs  Internal.hs
src/Text/EscapeArtist/Internal/: Constants.hs
test/: EscapeArtistSpec.hs  Spec.hs  VisualTest.hs
test/EscapeArtistSpec/: TestData.hs
test/Text/: ColorPrintSpec.hs  EscapeArtistSpec.hs
test/Text/ColorPrint/: TestData.hs
test/Text/EscapeArtistSpec/: TestData.hs
