name:                escape-artist
version:             0.1.0
synopsis:            Haskell ASCII Escape Codes Made Easy
description:         Please see README.md
homepage:            https://github.com/EarthCitizen/escape-artist#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  src/Text/EscapeArtist/Constants.hs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.EscapeArtist
                     , Text.EscapeArtist.Internal
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  ghc-options:
  default-language:    Haskell2010
  other-modules:       Text.EscapeArtist.Constants

test-suite escape-artist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.EscapeArtistSpec
                     , Text.EscapeArtistSpec.TestData
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , escape-artist
                     , hspec
                     , silently
                     , text
                     , QuickCheck
  -- Extra include prevents needing to expose constants module
  ghc-options:         -i./src -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EarthCitizen/escape-artist
