name:                escape-artist
version:             0.1.0
synopsis:            ANSI Escape Sequence Text Decoration Made Easy
description:         Please see README.md
homepage:            https://github.com/EarthCitizen/escape-artist#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Daniels
maintainer:          rd.github@gmail.com
copyright:           2016 Ryan Daniels
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-doc-files:     images/underline_off_sm.png

library
  hs-source-dirs:      src
  exposed-modules:     EscapeArtist
                     , EscapeArtist.Constants
                     , EscapeArtist.Internal
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  ghc-options:
  default-language:    Haskell2010

test-suite escape-artist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       EscapeArtistSpec
                     , EscapeArtistSpec.TestData
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , escape-artist
                     , hspec
                     , silently
                     , text
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EarthCitizen/escape-artist
