name:                escape-artist
version:             1.0.0
synopsis:            ANSI Escape Sequence Text Decoration Made Easy
description:         Please see README.md
homepage:            https://github.com/EarthCitizen/escape-artist#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Daniels
maintainer:          rd.github@gmail.com
copyright:           2016 Ryan Daniels
category:            Text
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Text.EscapeArtist
                     , Text.EscapeArtist.Internal
                     , Text.EscapeArtist.Internal.Constants
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1 && < 0.11
                     , text >= 1.2.2.1 && < 1.3
  ghc-options:
  default-language:    Haskell2010

test-suite escape-artist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.EscapeArtistSpec
                     , Text.EscapeArtistSpec.TestData
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1 && < 0.11
                     , escape-artist
                     , hspec >= 2.2.4 && < 2.3
                     , silently >= 1.2.5 && < 1.3
                     , text >= 1.2.2.1 && < 1.3
                     , QuickCheck >= 2.9.2 && < 2.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  ExistentialQuantification, ExtendedDefaultRules, FlexibleInstances, NoMonomorphismRestriction
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EarthCitizen/escape-artist
